// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Browse renders associated classes correctly 1`] = `
<React.Fragment>
  <Connect(Component) />
</React.Fragment>
`;

exports[`Browse renders courses correctly 1`] = `
<React.Fragment>
  <Connect(Component) />
  <ForwardRef(WithStyles) />
  <Connect(Component) />
</React.Fragment>
`;

exports[`Browse renders schools correctly 1`] = `
<React.Fragment>
  <Connect(Component) />
</React.Fragment>
`;

exports[`Browse renders sections correctly 1`] = `
<React.Fragment>
  <Connect(Component) />
</React.Fragment>
`;

exports[`Browse renders subjects correctly 1`] = `
<React.Fragment>
  <Connect(Component) />
  <ForwardRef(WithStyles) />
  <Connect(Component) />
</React.Fragment>
`;
